set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(allocator)
add_subdirectory(allocator_boundary_tags)
add_subdirectory(allocator_buddies_system)
add_subdirectory(allocator_global_heap)
add_subdirectory(allocator_red_black_tree)
add_subdirectory(allocator_sorted_list)